# semaptic

./: README.md  pyproject.toml  requirements.txt  semaptic.py
